@@ -3,12 +3,60 @@ using Terraria.Graphics.Capture;
 using Terraria.ModLoader;
 using Microsoft.Xna.Framework;
 using InfectedQualities.Core;
+using Terraria.ID;
+using InfectedQualities.Content.Extras;
 
 namespace InfectedQualities.Content.Biomes
 {
     public class HallowedJungle : ModBiome
     {
-        public override int Music => -1;
+        public override int Music
+        {
+            get
+            {
+                if(ModContent.GetInstance<InfectedQualitiesClientConfig>().HallowedJungleMusic)
+                {
+                    if(Main.LocalPlayer.MusicUnderground())
+                    {
+                        if(InfectedQualitiesUtilities.OtherworldMusic())
+                        {
+                            if (Main.remixWorld)
+                            {
+                                return MusicID.OtherworldlyHallow;
+                            }
+                            return MusicID.OtherworldlyUGHallow;
+                        }
+
+                        if(Main.remixWorld)
+                        {
+                            return MusicID.TheHallow;
+                        }
+                        return MusicID.UndergroundHallow;
+                    }
+                    else if(!Main.raining)
+                    {
+                        if (InfectedQualitiesUtilities.OtherworldMusic() && Main.dayTime)
+                        {
+                            return MusicID.OtherworldlyHallow;
+                        }
+
+                        if (Main.dayTime)
+                        {
+                            if (Main.IsItAHappyWindyDay && !Main.remixWorld)
+                            {
+                                return MusicID.WindyDay;
+                            }
+                            return MusicID.TheHallow;
+                        }
+                        else if(InfectedQualitiesModSupport.HallowNightMusic())
+                        {
+                            return MusicLoader.GetMusicSlot(InfectedQualitiesModSupport.SpiritMod, "Sounds/Music/HallowNight");
+                        }
+                    }
+                }
+                return -1;
+            }
+        }
 
         public override SceneEffectPriority Priority => SceneEffectPriority.BiomeMedium;
 
