@@ -22,6 +22,12 @@ namespace InfectedQualities.Core
         [BackgroundColor(45, 148, 185)]
         [DefaultValue(true)]
         public bool BiomeSightWallHighlighting { get; set; }
+
+        [Header("$Mods.InfectedQualities.Config.Title.Audio")]
+        [LabelKey("$Mods.InfectedQualities.Config.HallowedJungleMusic.Label"), TooltipKey("$Mods.InfectedQualities.Config.HallowedJungleMusic.Tooltip")]
+        [BackgroundColor(45, 148, 185)]
+        [DefaultValue(true)]
+        public bool HallowedJungleMusic { get; set; }
     }
 
     [BackgroundColor(29, 11, 45, 200)]
