@@ -72,6 +72,7 @@ Mods: {
 				Content: Конфигурация контента
 				Experimental: Конфигурация экспериментальных функций
 				Visual: Конфигурация визуала
+				Audio: Конфигурация звука
 			}
 
 			InfectedBiomes: {
@@ -167,6 +168,11 @@ Mods: {
 			BiomeSightWallHighlighting: {
 				Label: "[i:5211] Подсветка стен биомным зрением"
 				Tooltip: Эффект зелья биомного зрения будет подсвечивать заражённые стены. Совместимо с другими модами.
+			}
+
+			HallowedJungleMusic: {
+				Label: "[i:573] Музыка освящения в джунглях"
+				Tooltip: Музыка освящения будеть играть в освящённых джунглях. Можеть быть несовместимо с модами, измняющими музыку.
 			}
 		}
 
