@@ -12,6 +12,7 @@
 -Chlorophyte infection preventation now goes back to normal if 'InfectedBiomes' config is turned off.
 -Added an experimental config option to bring back demon altars spawning in infected blocks.
 -Added infected variants of moss blocks, and a config option to disable it.
+-Hallow theme now plays in the Hallowed jungle, can be disabled in the config.
 
 0.7.1
 =====
